VPC/public-subnets.tf
#Deploy the public subnets
resource "aws_subnet" "public_subnets" {
    for_each           = var.public_subnets
    vpc_id             = aws_vpc.vpc.id
    cidr_block         = cidrsubnet(var.vpc_cidr, 8, each.value + 100)
    availability_zone  = tolist(data.aws_availability_zones.available.names)[each.value]
    map_public_ip_on_launch = true

    tags = {
        Name      = each.key
        Terraform = "true"
    }
}

resource "aws_route_table_association" "public" {
    depends_on     = [aws_subnet.public_subnets]
    route_table_id = aws_route_table.public_route_table.id
    for_each       = aws_subnet.public_subnets
    subnet_id      = each.value.id
}
